other user schedule view added

--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -3,7 +3,7 @@
     <ion-item>
       <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
       <ion-title>Friends</ion-title>
-      <ion-item class="addFriend-button" slot="end" routerLink="/home/search">
+      <ion-item class="addFriend-button" slot="end" (click)="addFriend()">
         <ion-icon name="add-outline"></ion-icon>
         <ion-icon name="people-outline"></ion-icon>
       </ion-item>
