--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,8 +1,13 @@
 <div class = "outer-container">
   <div class="body-content">
     <ion-card *ngFor = "let schedule of schedules">
-      <ion-icon name = "receipt-outline" slot = "start"></ion-icon>
-      <ion-card-header>{{schedule.name}}</ion-card-header>
+      <ion-item>
+        <ion-icon name="receipt-outline"></ion-icon>
+        <ion-text>
+          {{schedule.name}}
+        </ion-text>
+        <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
+      </ion-item>
     </ion-card>
   </div>
 </div>
