modified the register page

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,24 +1,15 @@
 <ion-content class="registrationContainer">
   <ion-grid class="registrationGrid">
-    <!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
-    <ion-item class="logo-img">
-      <ion-img src="assets/Asset 1.png"></ion-img>
-    </ion-item>
-
-    <ion-text class="registrationHeader"> Register </ion-text>
+    <ion-card>
+      <ion-card-header> Create an account </ion-card-header>
 
     <form [formGroup]="registrationForm"
     ngxsForm="register.registrationForm"
     (submit)="register()">
-      <ion-item class="emailSection">
-        <ion-img class="emailLogo" src="/assets/vector-icon.svg"></ion-img>
-        <ion-label>Email:</ion-label>
-        <!-- aria-label="Email" -->
+      <ion-item class="input-item">
+        <ion-label position="floating">
+          <ion-icon src="/assets/vector-icon.svg"></ion-icon>  Email
+        </ion-label>
         <ion-input
           type="email"
           name="email"
@@ -27,10 +18,10 @@
         ></ion-input>
       </ion-item>
 
-      <ion-item class="passwordSection">
-        🔑
-        <ion-label>Password:</ion-label>
-        <!-- aria-label="Password" -->
+      <ion-item class="input-item">
+        <ion-label position="floating">
+          🔑 Password
+        </ion-label>
         <ion-input
           type="password"
           name="password"
@@ -41,9 +32,10 @@
         ></ion-input>
       </ion-item>
 
-      <ion-item class="cPasswordSection">
-        🔑
-        <ion-label>Confirm Password:</ion-label>
+      <ion-item class="input-item">
+        <ion-label position="floating">
+          🔑 Confirm Password
+        </ion-label>
         <ion-input
           type="password"
           name="cPassword"
@@ -54,9 +46,22 @@
         ></ion-input>
       </ion-item>
 
-      <ion-button expand="block" type="submit" class="registerButton"
-        >Create Account</ion-button
-      >
+      <ion-button 
+        expand="block" 
+        type="submit" 
+        class="registerButton"
+      >Create Account</ion-button>
     </form>
+    
+    <ion-card-subtitle>
+      Already have an account?
+      <hr>
+    </ion-card-subtitle>
+    <ion-button class="signIn-buttons" expand="block" >
+      <ion-icon name="logo-google"></ion-icon>
+      <ion-text>continue with google</ion-text>
+    </ion-button>
+    <ion-button class="signIn-buttons" expand="block">Sign in</ion-button>
+    </ion-card>
   </ion-grid>
 </ion-content>
