--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,37 +1,28 @@
-.logo-img {
-    width: 180px;
-    height: 180px;
-    position:relative;
-    justify-items: center;
-    overflow: hidden;
-  }
-
-.registerButton{
-  margin-left: 20%;
-  width:60%;
-  justify-content: center;
-  font-size: 20px;
-}
-
 .registrationContainer {
   --ion-background-color: #F1FAEE;
+ // --background: url('/assets/Asset 1.png') no-repeat center/cover fixed;
+ animation: fadeIn 5s;
 }
 
-.logo-img{
-width: 150px;
-height: 150px;
-margin-bottom: 5%;
+ion-card {
+  background-color: rgba($color: #a9cfe0, $alpha: 0.5);
+  padding: 20px;
 }
 
-.registrationHeader {
+ion-card-subtitle {
+  margin: 20px;
+}
+
+ion-card-header {
   color: #000;
   font-size: 30px;
   font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
-    text-align: center;
-    align-items: center;
-    margin-bottom: 10%;
     font-weight: bolder;
+}
+
+.signIn-buttons {
+  margin-bottom: 10px;
 }
 
 .registrationGrid{
@@ -42,44 +33,15 @@ margin-bottom: 5%;
   flex-direction: column;
 }
 
-ion-button {
-  --background: #A8DADC;
-  --background-hover: #9ce0be;
-  --background-activated: #88f4be;
-  --background-focused: #88f4be;
-
-  --color: #000;
-
-  --border-radius: 30px;
-  --border-color: #E63946;
-  --border-style: solid;
-  --border-width: 3px;
-  
-
-  --ripple-color: deeppink;
-
-  --padding-top: 20px;
-  --padding-bottom: 20px;
+.input-item{
+  --background: transparent;
+  margin-bottom: 5%;
+  border-radius: 10px;
+  color: black;
+  font-weight: bolder;
 }
 
-.emailSection, .passwordSection, .cPasswordSection{
-  width: 80%;
-  margin-left: 10%;
-  --border-radius: 30px;
-    border-radius: 30px;
-    --background: #A8DADC;
-    border: 3px solid #E63946;
-    margin-bottom: 5%;
-    // padding-top: 5%;
-    // padding-bottom: 5%;
-  //   --margin-top: 50px;
-  // --margin-bottom: 50px;
-}
-
-.emailSection{
-  margin-top: 15%;
-}
-
-.cPasswordSection{
-  margin-bottom: 15%;
+@keyframes fadeIn {
+  0% { opacity: 0.1; }
+  100% { opacity: 1; }
 }
