--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -30,6 +30,9 @@
           <ion-icon name="add"></ion-icon>
         </ion-button>
       </form>
+      <ion-button color="primary" type="button" (click)="saveExercises()">
+        Save Exercises
+      </ion-button>
     </div>
   </div>
 </ion-content>
