--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,74 +1,73 @@
 <ion-content class="outerContainer">
-  <ion-grid class="registrationGrid">
-    <ion-row>
-      <ion-col>
-        <ion-card>
-          <ion-card-title>
-            Sweat<img src="/assets/Asset 2.png" />Session
-          </ion-card-title>
-          <h5>Sign up</h5>
-          <ion-text>Please register an account</ion-text>
-          <form [formGroup]="registrationForm"
-          ngxsForm="register.registrationForm"
-          (submit)="register()">
-            <ion-item class="input-item">
-              <ion-label position="floating">
-                <ion-icon src="/assets/vector-icon.svg"></ion-icon>  Email
-              </ion-label>
-              <ion-input
-                type="email"
-                name="email"
-                formControlName="email"
-                required
-              ></ion-input>
-            </ion-item>
+  <div class="background-cover">
+    <ion-img src="/assets/Asset 1.png"></ion-img>
+  </div>
+  <ion-card>
+    <div class="inner-container">
+      <ion-card-title>
+        Sweat<img src="/assets/Asset 2.png" />Session
+      </ion-card-title>
+      <h5>Sign up</h5>
+      <ion-text>Please register an account</ion-text>
+      <form [formGroup]="registrationForm"
+      ngxsForm="register.registrationForm"
+      (submit)="register()">
+        <ion-item class="input-item">
+          <ion-label position="floating">
+            <ion-icon src="/assets/vector-icon.svg"></ion-icon>  Email
+          </ion-label>
+          <ion-input
+            type="email"
+            name="email"
+            formControlName="email"
+            required
+          ></ion-input>
+        </ion-item>
+  
+        <ion-item class="input-item">
+          <ion-label position="floating">
+            🔑 Password
+          </ion-label>
+          <ion-input
+            type="password"
+            name="password"
+            minlength="6"
+            maxlength="25"
+            formControlName="password"
+            required
+          ></ion-input>
+        </ion-item>
+  
+        <ion-item class="input-item">
+          <ion-label position="floating">
+            🔑 Confirm Password
+          </ion-label>
+          <ion-input
+            type="password"
+            name="cPassword"
+            minlength="6"
+            maxlength="25"
+            formControlName="cPassword"
+            required
+          ></ion-input>
+        </ion-item>
+  
+        <ion-button 
+          expand="block" 
+          type="submit" 
+          class="registerButton"
+        >Create Account</ion-button>
+      </form>
       
-            <ion-item class="input-item">
-              <ion-label position="floating">
-                🔑 Password
-              </ion-label>
-              <ion-input
-                type="password"
-                name="password"
-                minlength="6"
-                maxlength="25"
-                formControlName="password"
-                required
-              ></ion-input>
-            </ion-item>
-      
-            <ion-item class="input-item">
-              <ion-label position="floating">
-                🔑 Confirm Password
-              </ion-label>
-              <ion-input
-                type="password"
-                name="cPassword"
-                minlength="6"
-                maxlength="25"
-                formControlName="cPassword"
-                required
-              ></ion-input>
-            </ion-item>
-      
-            <ion-button 
-              expand="block" 
-              type="submit" 
-              class="registerButton"
-            >Create Account</ion-button>
-          </form>
-          
-          <ion-card-subtitle>
-            Already have an account?
-            <hr>
-          </ion-card-subtitle>
-          <ion-button class="signIn-buttons" expand="block" >
-            <ion-icon name="logo-google"></ion-icon>
-            <ion-text>continue with google</ion-text>
-          </ion-button>
-          <ion-button class="signIn-buttons" expand="block" routerLink="/login">Sign in</ion-button>
-          </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      <ion-card-subtitle>
+        Already have an account?
+        <hr>
+      </ion-card-subtitle>
+      <ion-button class="signIn-buttons" expand="block" >
+        <ion-icon name="logo-google"></ion-icon>
+        <ion-text>continue with google</ion-text>
+      </ion-button>
+      <ion-button class="signIn-buttons" expand="block" routerLink="/login">Sign in</ion-button>
+    </div>
+    </ion-card>
 </ion-content>
