--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,12 +1,19 @@
 .outerContainer {
   --ion-background-color: #F1FAEE;
-  // --background: url('/assets/Asset 1.png') no-repeat center/cover fixed;
  animation: fadeIn 5s;
+ overflow: auto;
 }
 
 ion-card {
-  background-color: rgba($color: #a9cfe0, $alpha: 0.2);
-  padding: 20px;
+  margin: 0px;
+  border-radius: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba($color: #a9cfe0, $alpha: 0.8);
+  height: 100vh;
+  width: 100vw;
+ animation: fadeIn 5s;
 }
 
 img {
@@ -30,7 +37,7 @@ ion-card-subtitle {
 }
 
 ion-card-header {
-  color: #000;
+  color: #8490ba;
   font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
 }
@@ -39,12 +46,23 @@ ion-card-header {
   margin-bottom: 10px;
 }
 
-.registrationGrid{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
+ion-button {
+  --background: #A8DADC;
+  --background-hover: #9ce0be;
+  --background-activated: #88f4be;
+  --background-focused: #88f4be;
+
+  --color: #000;
+
+  --border-radius: 10px;
+  --border-color: #E63946;
+  --border-style: solid;
+  --border-width: 3px;
+  
+
+  --ripple-color: deeppink;
+
+  --margin: 20px;
 }
 
 .input-item{
@@ -53,6 +71,28 @@ ion-card-header {
   border-radius: 10px;
   color: black;
   font-weight: bolder;
+}
+
+.inner-container {
+  box-shadow: 0px 2px 10px;
+  padding: 40px;
+  border-radius: 5px;
+  background-color: rgba($color: #050e12, $alpha: 0.1); // #95c4da
+}
+
+.background-cover {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  //background-color: rgb(212, 147, 147);
+}
+
+ion-img {
+  opacity: 0.2;
 }
 
 @keyframes fadeIn {
