--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true" class="outerContainer">
+<div class="outerContainer">
   <div class="background-cover">
     <ion-img src="/assets/Asset 1.png"></ion-img>
   </div>
@@ -36,4 +36,4 @@
         <h5>Forgot password?</h5>
     </div>
   </ion-card>
-</ion-content>
+</div>
