--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,4 +1,4 @@
-<ion-content class="outerContainer">
+<div class="outerContainer">
   <div class="background-cover">
     <ion-img src="/assets/Asset 1.png"></ion-img>
   </div>
@@ -70,4 +70,4 @@
       <ion-button class="signIn-buttons" expand="block" routerLink="/login">Sign in</ion-button>
     </div>
     </ion-card>
-</ion-content>
+</div>
