Part of points UI

--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -1,13 +1,12 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>points</ion-title>
-  </ion-toolbar>
+  <ion-item style="display: flex; align-items: center;">
+    <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
+    <ion-title style="margin-left: 0rem;">Points</ion-title>
+  </ion-item>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">points</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="pointsContainer">
+  <ion-grid class="pointsGrid">
+    
+  </ion-grid>
 </ion-content>
