--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -7,6 +7,10 @@
 
 <ion-content class="pointsContainer">
   <ion-grid class="pointsGrid">
-    
+    <ion-item class="userPointsSection">
+      <ion-title class="userPointsNumber">Points: </ion-title>
+      <ion-text class="userPointsNumberValue"></ion-text>
+      <ion-img src="assets/sweatSessionPoint.png"></ion-img>
+    </ion-item>
   </ion-grid>
 </ion-content>
