--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -25,11 +25,46 @@
       <ion-item class="wpPointsSection">
       <ion-text class="workoutPlanPoints">Points:</ion-text>
       <span class="workoutPlanPointsContent">
-        <ion-text class="wpNumberValue">5</ion-text>
+        <ion-text class="wpNumberValue">50</ion-text>
         <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
       </span>
     </ion-item>
     <ion-button routerLink="/plans">View Workout Plan</ion-button>
+    </ion-item>
+
+
+    <ion-item class="workoutSessionPointsSection">
+      <h2 class="pointsHeader" style="margin:None">Attend 3 Workout Sessions</h2>
+      <div class="progressContainer">
+        <ion-text class="progressHeader">Progress: </ion-text>
+        <ion-text class="progressText">1/3</ion-text>
+      </div>
+      <ion-progress-bar value="0.3333" class="custom-progress-bar" style="--ion-color-primary: var(--custom-red);"></ion-progress-bar>
+      <ion-item class="wpPointsSection">
+      <ion-text class="workoutPlanPoints">Points:</ion-text>
+      <span class="workoutPlanPointsContent">
+        <ion-text class="wpNumberValue">75</ion-text>
+        <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
+      </span>
+    </ion-item>
+    <ion-button routerLink="/sessions">View Gym Schedule</ion-button>
+    </ion-item>
+
+    <ion-item class="workoutSessionPointsSection">
+      <h2 class="pointsHeader" style="margin:None">Complete a fitness goal</h2>
+      <div class="progressContainer">
+        <ion-text class="progressHeader">Progress: </ion-text>
+        <ion-text class="progressText">0/1</ion-text>
+      </div>
+      <ion-progress-bar value="0.0" class="custom-progress-bar" style="--ion-color-primary: var(--custom-red);"></ion-progress-bar>
+      <ion-item class="wpPointsSection">
+      <ion-text class="workoutPlanPoints">Points:</ion-text>
+      <span class="workoutPlanPointsContent">
+        <ion-text class="wpNumberValue">100</ion-text>
+        <ion-img src="assets/sweatSessionPoint.png" class = "wpPointsImg"></ion-img>
+      </span>
+    </ion-item>
+    <ion-button routerLink="/goals">View Fitness Goals</ion-button>
     </ion-item>
   </ion-grid>
 </ion-content>
