--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,7 +6,7 @@
   </ion-header>
 
   <ion-content>
-    <ion-item class="clickable" (click)="goToSettings()">
+    <ion-item lines="none" class="clickable" (click)="goToSettings()">
       <ion-icon name="settings-outline">
       </ion-icon>
       <ion-label class="menu-label">
@@ -16,7 +16,7 @@
     </ion-item>
    
 
-    <ion-item class="clickable" (click)="userLogout()">
+    <ion-item lines="none" class="clickable" (click)="userLogout()">
       <ion-icon name="log-out-outline">
       </ion-icon>
       <ion-label class="menu-label">
