--- a/src/app/pages/search/usersearch/usersearch.component.html
+++ b/src/app/pages/search/usersearch/usersearch.component.html
@@ -10,12 +10,12 @@
   
   <div class="search-suggestions" *ngIf="searchTerms.showSuggestions">
     <ion-list >
-      <ion-item line="none" 
+      <ion-item lines="none" 
         *ngFor="let suggestion of searchTerms.filteredSuggestions" 
         (click)="find(suggestion)">
         {{ suggestion.displayName }}
       </ion-item>
-      <ion-item *ngIf="searchTerms.filteredSuggestions!.length==0">
+      <ion-item lines="none" *ngIf="searchTerms.filteredSuggestions!.length==0">
         <ion-text>user not found</ion-text>
       </ion-item>
     </ion-list>
