--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -1,9 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
       <ion-title>Schedules</ion-title>
-      <ion-item slot="end"  class="add-schedule-button" (click)="addSchedule()">
+      <ion-item lines="none"slot="end"  class="add-schedule-button" (click)="addSchedule()">
         <ion-icon name="add-outline"></ion-icon>
         <ion-icon name="receipt-outline"></ion-icon>
       </ion-item>
