--- a/src/global.scss
+++ b/src/global.scss
@@ -28,3 +28,8 @@
 // ion-content {
 //     --ion-background-color: #F1FAEE;
 // }
+
+// ion-item{
+//     --highlight-height: 0;
+//     --inner-border-width: 0;
+// }
