--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -1,7 +1,7 @@
  <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-item>
-      <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
+      <ion-icon name="arrow-back-outline" backButton></ion-icon>
       <ion-title>User</ion-title>
     </ion-item>
   </ion-toolbar>
