--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item>
-      <ion-icon name="arrow-back-outline" routerLink="/home/dashboard"></ion-icon>
+    <ion-item backButton>
+      <ion-icon name="arrow-back-outline"></ion-icon>
       <ion-title>Profile</ion-title>
       <ion-icon name="create-outline" routerLink="/setprofile" slot="end">
         <ion-label>Edit</ion-label>
