--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -1,16 +1,22 @@
-<ion-content>
-  <div class = "outer-container">
-    <div class="body-content">
-      <ion-card *ngFor = "let friend of friends">
-        <ion-item>
-          <ion-avatar>
-            <img src = "{{friend.profileURL}}" alt="image here" />
-          </ion-avatar>
-          <ion-text>{{friend.name}}</ion-text>
-          <ion-icon name="chevron-forward-outline" slot = "end" (click)="viewOtherUser(friend)"></ion-icon>
-        </ion-item>
-      </ion-card>
-    </div>
-  </div>
+<ng-container>
+  <ion-item>
+    <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+    <ion-title>Friends</ion-title>
+  </ion-item>
   
-</ion-content>
+  <ion-content>
+    <div class = "outer-container">
+      <div class="body-content">
+        <ion-card *ngFor = "let friend of friends">
+          <ion-item>
+            <ion-avatar>
+              <img src = "{{friend.profileURL}}" alt="image here" />
+            </ion-avatar>
+            <ion-text>{{friend.name}}</ion-text>
+            <ion-icon name="chevron-forward-outline" slot = "end" (click)="viewOtherUser(friend)"></ion-icon>
+          </ion-item>
+        </ion-card>
+      </div>
+    </div>
+  </ion-content>
+</ng-container>
