back navigation for otheruser, schedules and setprofile added

--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,3 +1,8 @@
+<ion-item>
+  <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+  <ion-title>WorkoutSchedules</ion-title>
+</ion-item>
+
 <ion-content>
   <div class = "outer-container">
     <div class="body-content">
