user avator added for the search suggestions

--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -1,8 +1,12 @@
 <ng-container>
-  <ion-item>
-    <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
-    <ion-title>Friends</ion-title>
-  </ion-item>
+  <ion-header>
+    <ion-toolbar>
+      <ion-item>
+        <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+        <ion-title>Friends</ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-header>
   
   <ion-content>
     <div class = "outer-container">
