--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,20 +1,26 @@
-<ion-item>
-  <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
-  <ion-title>WorkoutSchedules</ion-title>
-</ion-item>
-
-<ion-content>
-  <div class = "outer-container">
-    <div class="body-content">
-      <ion-card *ngFor = "let schedule of schedules">
-        <ion-item>
-          <ion-icon name="receipt-outline"></ion-icon>
-          <ion-text>
-            {{schedule.name}}
-          </ion-text>
-          <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
-        </ion-item>
-      </ion-card>
+<ng-container>
+  <ion-header>
+    <ion-toolbar>
+      <ion-item>
+        <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+        <ion-title>WorkoutSchedules</ion-title>
+      </ion-item>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+    <div class = "outer-container">
+      <div class="body-content">
+        <ion-card *ngFor = "let schedule of schedules">
+          <ion-item>
+            <ion-icon name="receipt-outline"></ion-icon>
+            <ion-text>
+              {{schedule.name}}
+            </ion-text>
+            <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
+          </ion-item>
+        </ion-card>
+      </div>
     </div>
-  </div>
-</ion-content>
+  </ion-content>
+</ng-container>
