added back navigation for points page

--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-item style="display: flex; align-items: center;">
-    <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
+    <ion-icon name="arrow-back-outline" (click) ="back()" style="font-size: 2rem;"></ion-icon>
     <ion-title style="margin-left: 0rem;">Points</ion-title>
   </ion-item>
 </ion-header>
