--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
       <ion-title>Profile</ion-title>
       <ion-icon name="create-outline" routerLink="/setprofile" slot="end">
