fixed friends minor errors

--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -1,6 +1,6 @@
  <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
       <ion-title>User</ion-title>
     </ion-item>
