--- a/src/app/pages/friends/friend/friend.component.html
+++ b/src/app/pages/friends/friend/friend.component.html
@@ -3,7 +3,7 @@
     <ion-item class="friend">
       <!-- <ion-button>remove</ion-button> -->
       <ion-avatar>
-        <img src="assets/sweatsessionlogotransparent1.png"/>
+        <img src=" {{friend.profileURL}}"/>
       </ion-avatar>
       <ion-text>
         {{friend.name}}
