settings page modified

--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -2,7 +2,10 @@
 
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>settings</ion-title>
+    <ion-item lines="none">
+      <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+      <ion-title>settings</ion-title>
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
