--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -1,7 +1,10 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">workout_tracking</ion-title>
+      <ion-item lines="none">
+        <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+        <ion-title>workout_tracking</ion-title>
+      </ion-item>
     </ion-toolbar>
   </ion-header>
 
