--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -1,7 +1,7 @@
  <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-item lines="none">
-      <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+      <backbutton></backbutton>
       <ion-title>User</ion-title>
     </ion-item>
   </ion-toolbar>
