--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -1,13 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>groups</ion-title>
+    <ion-item>
+      <backbutton></backbutton>
+      <ion-title>groups</ion-title>
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">groups</ion-title>
-    </ion-toolbar>
-  </ion-header>
 </ion-content>
