--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -2,7 +2,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-item>
-        <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+        <backbutton></backbutton>
         <ion-title>Friends</ion-title>
       </ion-item>
     </ion-toolbar>
