--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <!-- <ion-item *ngIf = "!isFriendsSlideActive && !isScheduleSlideActive"> -->
     <ion-item>
-      <ion-icon name="arrow-back-outline" (click)="backtoPreviousPage()"></ion-icon>
+      <backbutton></backbutton>
       <ion-title>{{user!.name}}</ion-title>
     </ion-item>
 <!-- 
