--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -3,7 +3,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-item lines="none">
-      <ion-icon name="arrow-back-outline" (click)="back()"></ion-icon>
+      <backbutton></backbutton>
       <ion-title>settings</ion-title>
     </ion-item>
   </ion-toolbar>
