--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-item lines="none">
-      <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+      <backbutton></backbutton>
       <ion-title>Profile</ion-title>
       <ion-icon name="create-outline" routerLink="/setprofile" slot="end">
         <ion-label>Edit</ion-label>
