--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-item lines="none">
-      <ion-icon name="arrow-back-outline" (click)="back()"></ion-icon>
+      <backbutton></backbutton>
       <ion-title>Schedules</ion-title>
       <ion-item lines="none"slot="end"  class="add-schedule-button" (click)="addSchedule()">
         <ion-icon name="add-outline"></ion-icon>
