--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -2,7 +2,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-item lines="none">
-        <ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+        <backbutton></backbutton>
         <ion-title>workout_tracking</ion-title>
       </ion-item>
     </ion-toolbar>
