--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -18,7 +18,7 @@
     <br>
     
   <div *ngIf="noticeamount > 0" >
-  <ion-card class="Mcard" *ngFor="let notice of noticeList">
+  <ion-card class="Mcard" *ngFor="let notice of noticeList2">
     <ion-card-content style="display:flex ; align-items:center" >
   <ion-avatar slot="start">
     <img alt="Silhouette of a person's head" src="https://i.pravatar.cc/300" />
