--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -1,13 +1,51 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>groups</ion-title>
+    <ion-item>
+      <ion-icon name="arrow-back-outline" routerLink="/home/dashboard"></ion-icon>
+      <ion-title>Groups</ion-title>
+      <ion-icon name="add-sharp" routerLink="/setprofile" slot="end">
+        <ion-label>add</ion-label>
+      </ion-icon>
+
+      <!-- <ion-button class="button"expand="block" routerLink="/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon> -->
+      
+        <!-- <ion-item class="editProfile-button" slot="end">
+        <ion-title class="header">Edit</ion-title> -->
+      <!-- </ion-item> -->
+    </ion-item>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-card *ngFor="let Group of Groups$">
+    <ion-card-header>
+      <ion-card-subtitle>{{Group.description}}</ion-card-subtitle>
+      <ion-card-title>{{Group.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+ 
+        <ion-item class = "groupPic">
+          <ion-img src={{Group.image}} alt="logo-image" class="image"></ion-img> 
+        </ion-item>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">groups</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      <!-- <ion-item>
+        <ion-icon name="people-outline" slot="start"></ion-icon>
+        <ion-label>{{Group.size}}</ion-label>
+      </ion-item> -->
+    </ion-card-content>
+    
+    
+    <ion-card-content>
+      <ion-button slot = "start">
+          <ion-icon name="chatbox-outline" slot="start"></ion-icon>
+          <ion-label>Chat</ion-label>
+      </ion-button>
+  
+      <ion-button slot = "end">
+        <ion-icon name="calendar-outline" slot="start"></ion-icon>
+        <ion-label>View Workout</ion-label>
+      </ion-button>
+
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+  
